[gd_scene load_steps=4 format=3 uid="uid://bnse8jcrqabaw"]

[ext_resource type="Script" path="res://game.gd" id="1_psh3c"]
[ext_resource type="PackedScene" uid="uid://c6j0t7jrrvyp6" path="res://number_label.tscn" id="2_2o4g7"]
[ext_resource type="PackedScene" uid="uid://me44kgaggou" path="res://user_input.tscn" id="3_r58nl"]

[node name="Game" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_psh3c")

[node name="NewGameButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "New Game"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="NumberLabel1" parent="HBoxContainer" instance=ExtResource("2_2o4g7")]
layout_mode = 2

[node name="NumberLabel2" parent="HBoxContainer" instance=ExtResource("2_2o4g7")]
layout_mode = 2

[node name="NumberLabel3" parent="HBoxContainer" instance=ExtResource("2_2o4g7")]
layout_mode = 2

[node name="NumberLabel4" parent="HBoxContainer" instance=ExtResource("2_2o4g7")]
layout_mode = 2

[node name="HistoryLabel" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
scroll_following = true

[node name="UserInput" parent="." instance=ExtResource("3_r58nl")]
layout_mode = 2
